# google-photos-linkfarm

./: .gitignore  Cargo.toml  build.ps1  genson.js  schema.json
.cargo/: config.toml
src/: counter.rs  main.rs  metadata.rs
