[package]
name = "google_takeout"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.22"
filetime = "0.2.17"
glob = "0.3.0"
rexif = "0.7.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
fncmd = "1.2.5"
anyhow = { version = "1.0", features = ["std", "backtrace"] }
dashmap = "5.4.0"
rayon = "1.5.3"
